[project]
name = "job-matcher"
version = "0.1.0"
description = "Job description matcher project"
authors = [
    {name = "Andre Carlini"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "scrapers", from = "src" },
  { include = "processing", from = "src" },
  { include = "matcher", from = "src" }
]
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

